improve(header): prevent flickering

--- a/resources/less/_mixins.less
+++ b/resources/less/_mixins.less
@@ -236,6 +236,7 @@
   top: 0;
   left: 0;
   right: 0;
+  min-height: @header-height;
   z-index: @zindex-navbar-fixed;
 
   margin-bottom: 0;
